force-app/main/default/objects/DeliveryFee__c/DeliveryFee__c.object-meta.xml
<CustomObject>
    <description>Pricing and lead time per transporter and country</description>
    <label>Delivery Fee</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Delivery Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>