force-app/main/default/objects/DeliveryFee__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Destination country</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>