force-app/main/default/objects/DeliveryFee__c/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <description>Delivery lead time in days</description>
    <label>Delivery Time</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>