force-app/main/default/objects/DeliveryFee__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <label>Transporter</label>
    <referenceTo>Transporter__c</referenceTo>
    <relationshipLabel>Delivery Fees</relationshipLabel>
    <relationshipName>Delivery_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>